--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -26,8 +26,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: ${{ github.event.pull_request.head.ref }}
-      - uses: pnpm/action-setup@v2
-      - uses: actions/setup-node@v3
+      - uses: pnpm/action-setup@v4
+      - uses: actions/setup-node@v4
         with:
           node-version-file: ".node-version"
           cache: "pnpm"
@@ -58,7 +58,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: ${{ github.event.pull_request.head.ref }}
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v4
       - run: npx prettier@3.1.0 --write .
       - uses: EndBug/add-and-commit@v9
         with:
@@ -71,7 +71,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: ${{ github.event.pull_request.head.ref }}
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v4
       - run: npx markdownlint-cli --fix .
       - uses: EndBug/add-and-commit@v9
         with:
@@ -80,14 +80,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v4
       - run: npx anti-trojan-source --files='packages/**/src/**/*.{ts,tsx,js}'
   type-check:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v2
-      - uses: actions/setup-node@v3
+      - uses: pnpm/action-setup@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: "21"
           cache: "pnpm"
@@ -103,8 +103,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v2
-      - uses: actions/setup-node@v3
+      - uses: pnpm/action-setup@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: "21"
           cache: "pnpm"
@@ -126,8 +126,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: ${{ github.event.pull_request.head.ref }}
-      - uses: pnpm/action-setup@v2.2.1
-      - uses: actions/setup-node@v3
+      - uses: pnpm/action-setup@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: "21"
           cache: "pnpm"
@@ -137,10 +137,10 @@ jobs:
             registry: true
       - name: Get cache date
         id: get-date
-        run: echo "::set-output name=date::$(/bin/date -u "+%Y%m%d")"
+        run: echo "date::$(/bin/date -u "+%Y%m%d")" >> $GITHUB_STATE
         shell: bash
       - name: Restore ESLint cache
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: .eslintcache
           key: linter-v2-${{ steps.get-date.outputs.date }}
@@ -158,7 +158,7 @@ jobs:
         with:
           message: 'fix: eslint'
       - name: Upload eslint report
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: eslint
           path: reports/junit
