--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -45,12 +45,13 @@
     "pure-react-carousel": "^1.30.1",
     "qrcode": "^1.5.3",
     "react-hook-form": "^7.45.2",
-    "react-markdown": "^8.0.7",
+    "react-markdown": "^9.0.1",
     "react-qrcode-logo": "^2.9.0",
     "react-router-dom": "^6.23.1",
     "react-use": "^17.4.0",
-    "rehype-raw": "^6.1.1",
-    "remark-gfm": "^3.0.1",
+    "rehype-external-links": "^3.0.0",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.0",
     "unstated-next": "^1.1.0",
     "use-subscription": "^1.8.0",
     "web3-core-helpers": "1.10.2",
