--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
       "@types/node": "20.12.7",
       "@types/react": "$@types/react",
       "@types/react-dom": "$@types/react-dom",
+      "glob-stream": "7.0.0",
       "i18next-translation-parser>html-parse-stringify2": "github:locize/html-parse-stringify2#d463109433b2c49c74a081044f54b2a6a1ccad7c",
       "react": "$react",
       "react-dom": "$react-dom",
@@ -113,9 +114,10 @@
       "@types/node": "Singleton package",
       "@types/react": "Singleton package",
       "@types/react-dom": "Singleton package",
+      "glob-stream": "https://github.com/gulpjs/gulp/issues/2795",
+      "i18next-translation-parser": "see https://github.com/i18next/i18next-translation-parser/issues/11 manually pin the commit",
       "react": "Singleton package",
       "react-dom": "Singleton package",
-      "i18next-translation-parser": "see https://github.com/i18next/i18next-translation-parser/issues/11 manually pin the commit",
       "reflect-metadata": "Patching this",
       "webpack@5": "PR: https://github.com/webpack/webpack/pull/18139"
     },
