--- a/packages/mask/package.json
+++ b/packages/mask/package.json
@@ -98,7 +98,7 @@
     "@react-hookz/web": "^23.1.0",
     "@servie/events": "^3.0.0",
     "@sinonjs/text-encoding": "^0.7.2",
-    "@splinetool/react-spline": "2.2.6",
+    "@splinetool/runtime": "0.9.342",
     "@tanstack/query-async-storage-persister": "^5.29.1",
     "@tanstack/react-query-devtools": "^5.29.2",
     "@tanstack/react-query-persist-client": "^5.29.2",
