--- a/package.json
+++ b/package.json
@@ -154,7 +154,8 @@
       "@lifi/wallet-management@2.6.0": "patches/@lifi__wallet-management@2.6.0.patch",
       "react-use@17.4.0": "patches/react-use@17.4.0.patch",
       "gulp@5.0.0": "patches/gulp@5.0.0.patch",
-      "react-devtools-inline@5.2.0": "patches/react-devtools-inline@5.2.0.patch"
+      "react-devtools-inline@5.2.0": "patches/react-devtools-inline@5.2.0.patch",
+      "react-qrcode-logo@2.10.0": "patches/react-qrcode-logo@2.10.0.patch"
     }
   }
 }
