--- a/packages/mask/package.json
+++ b/packages/mask/package.json
@@ -35,9 +35,9 @@
   "dependencies": {
     "@dimensiondev/mask-wallet-core": "0.1.0-20211013082857-eb62e5f",
     "@ethereumjs/util": "^8.0.5",
+    "@ethersproject/providers": "^5.7.2",
     "@hookform/resolvers": "^3.1.1",
     "@lifi/widget": "^2.10.1",
-    "@ethersproject/providers": "^5.7.2",
     "@masknet/backup-format": "workspace:^",
     "@masknet/encryption": "workspace:^",
     "@masknet/flags": "workspace:^",
@@ -157,9 +157,11 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.13",
     "@types/color": "^3.0.3",
     "@types/react-devtools-inline": "^4.24.8",
+    "babel-plugin-react-compiler": "0.0.0-experimental-592953e-20240517",
     "copy-webpack-plugin": "^11.0.0",
     "devtools-ignore-webpack-plugin": "^0.1.1",
     "html-webpack-plugin": "^5.5.3",
+    "react-compiler-webpack": "^0.1.1",
     "react-devtools-inline": "5.2.0",
     "react-refresh": "^0.14.2",
     "rimraf": "^5.0.1",
