--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "cross-fetch": "^4.0.0",
     "cspell": "^7.2.0",
     "eslint": "9.3.0",
+    "eslint-formatter-junit": "^8.40.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-i": "^2.29.1",
     "eslint-plugin-react-hooks": "^4.6.2",
