--- a/package.json
+++ b/package.json
@@ -58,26 +58,28 @@
     "@changesets/cli": "^2.26.2",
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
+    "@eslint-react/eslint-plugin": "^1.5.13-next.1",
+    "@eslint/compat": "^1.0.1",
     "@magic-works/i18n-codegen": "^0.6.0",
     "@masknet/cli": "workspace:^",
     "@masknet/config": "workspace:^",
-    "@masknet/eslint-plugin": "^0.2.0",
+    "@masknet/eslint-plugin": "^0.3.0",
     "@nice-labs/git-rev": "^3.5.1",
     "@swc-node/register": "^1.9.0",
     "@swc/core": "1.3.106",
-    "@tanstack/eslint-plugin-query": "^5.28.11",
+    "@tanstack/eslint-plugin-query": "^5.35.6",
     "@types/lodash-es": "^4.17.9",
     "@vitest/ui": "^0.34.3",
     "cross-fetch": "^4.0.0",
     "cspell": "^7.2.0",
-    "eslint": "8.57.0",
+    "eslint": "9.3.0",
+    "eslint-formatter-junit": "^8.40.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-i": "^2.29.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-tss-unused-classes": "^1.0.2",
-    "eslint-plugin-unicorn": "^51.0.1",
-    "eslint-plugin-unused-imports": "^3.1.0",
+    "eslint-plugin-unicorn": "^53.0.0",
+    "eslint-plugin-unused-imports": "^3.2.0",
     "gulp": "^5.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
@@ -85,7 +87,7 @@
     "prettier": "^3.1.0",
     "svgo": "^3.0.2",
     "typescript": "5.5.0-beta",
-    "typescript-eslint": "^7.1.1",
+    "typescript-eslint": "^7.10.0",
     "vite": "^4.5.0",
     "vitest": "^0.34.6"
   },
