refactor: call contexts as providers

--- a/packages/plugins/SmartPay/package.json
+++ b/packages/plugins/SmartPay/package.json
@@ -29,7 +29,6 @@
         "@masknet/web3-shared-evm": "workspace:^",
         "date-fns": "^2.30.0",
         "react-router-dom": "^6.23.1",
-        "react-use": "^17.4.0",
-        "unstated-next": "^1.1.0"
+        "react-use": "^17.4.0"
     }
 }
