--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "@changesets/cli": "^2.26.2",
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
-    "@eslint-react/eslint-plugin": "^1.5.13-next.1",
+    "@eslint-react/eslint-plugin": "^1.5.13",
     "@eslint/compat": "^1.0.1",
     "@magic-works/i18n-codegen": "^0.6.0",
     "@masknet/cli": "workspace:^",
