--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -49,10 +49,10 @@ jobs:
         uses: actions/cache@v4
         with:
           path: packages/mask/node_modules/.cache/
-          key: extension-${{ hashFiles('pnpm-lock.yaml') }}-${{ steps.get-date.outputs.date }}
+          key: extension-v2-${{ hashFiles('pnpm-lock.yaml') }}-${{ steps.get-date.outputs.date }}
           restore-keys: |
-              extension-${{ hashFiles('pnpm-lock.yaml') }}
-              extension-
+              extension-v2-${{ hashFiles('pnpm-lock.yaml') }}
+              extension-v2-
       - run: git config --global url."https://github.com/".insteadOf git@github.com
       - run: pnpm install
       - run: npx gulp build-ci
