--- a/packages/shared-base-ui/tsconfig.json
+++ b/packages/shared-base-ui/tsconfig.json
@@ -7,5 +7,9 @@
   },
   "include": ["./src", "./src/**/*.json"],
   // Only type-level dependency.
-  "references": [{ "path": "../shared-base/tsconfig.json" }, { "path": "../flags/tsconfig.json" }]
+  "references": [
+    { "path": "../shared-base/tsconfig.json" },
+    { "path": "../flags/tsconfig.json" },
+    { "path": "../theme/tsconfig.json" }
+  ]
 }
