--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
     "msw": "^1.2.1",
     "prettier": "^3.3.0",
     "svgo": "^3.0.2",
-    "typescript": "5.5.0-beta",
+    "typescript": "5.5.1-rc",
     "typescript-eslint": "^7.10.0",
     "vite": "^4.5.0",
     "vitest": "^0.34.6"
