--- a/packages/injected-script/package.json
+++ b/packages/injected-script/package.json
@@ -3,7 +3,10 @@
   "type": "module",
   "version": "0.0.0",
   "private": true,
-  "sideEffects": ["./sdk/index.ts", "./main/**"],
+  "sideEffects": [
+    "./sdk/index.ts",
+    "./main/**"
+  ],
   "exports": {
     ".": {
       "types": "./dist/sdk/index.d.ts",
@@ -22,7 +25,7 @@
     "start": "rollup -c -w"
   },
   "devDependencies": {
-    "rollup": "^4.17.2",
+    "rollup": "^4.18.0",
     "rollup-plugin-swc3": "^0.11.2"
   }
 }
