--- a/packages/plugins/RSS3/package.json
+++ b/packages/plugins/RSS3/package.json
@@ -27,11 +27,9 @@
     "@masknet/web3-providers": "workspace:^",
     "@masknet/web3-shared-base": "workspace:^",
     "@masknet/web3-shared-evm": "workspace:^",
-    "@types/uuid": "^9.0.3",
     "bignumber.js": "9.1.2",
-    "date-fns": "^2.30.0",
-    "linkify-react": "^4.1.1",
-    "linkifyjs": "^4.1.1",
-    "uuid": "^9.0.0"
+    "date-fns": "^3.6.0",
+    "linkify-react": "^4.1.3",
+    "linkifyjs": "^4.1.3"
   }
 }
