--- a/packages/mask/public/jsconfig.json
+++ b/packages/mask/public/jsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "lib": ["ES2022", "DOM"],
+        "lib": ["ESNext", "DOM"],
         "target": "ES2022"
     },
     "include": ["./"]
