--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "@commitlint/config-conventional": "^19.2.2",
     "@eslint-react/eslint-plugin": "^1.5.16",
     "@eslint/compat": "^1.1.0",
-    "@magic-works/i18n-codegen": "^0.6.0",
+    "@magic-works/i18n-codegen": "^0.6.1",
     "@masknet/cli": "workspace:^",
     "@masknet/config": "workspace:^",
     "@masknet/eslint-plugin": "^0.3.0",
@@ -153,6 +153,7 @@
       "@mui/base@5.0.0-beta.40": "patches/@mui__base@5.0.0-beta.40.patch",
       "@lifi/wallet-management@2.6.0": "patches/@lifi__wallet-management@2.6.0.patch",
       "react-use@17.5.0": "patches/react-use@17.5.0.patch",
+      "gulp@5.0.0": "patches/gulp@5.0.0.patch",
       "react-devtools-inline@5.2.0": "patches/react-devtools-inline@5.2.0.patch"
     }
   }
