--- a/packages/shared-base/package.json
+++ b/packages/shared-base/package.json
@@ -3,7 +3,7 @@
   "description": "This package MUST be pure (have no side effects when imported).",
   "type": "module",
   "private": true,
-  "sideEffects": false,
+  "sideEffects": ["./src/i18n/instance.ts", "./dist/i18n/instance.js"],
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
