--- a/package.json
+++ b/package.json
@@ -153,7 +153,8 @@
       "@mui/base@5.0.0-beta.40": "patches/@mui__base@5.0.0-beta.40.patch",
       "@lifi/wallet-management@2.6.0": "patches/@lifi__wallet-management@2.6.0.patch",
       "react-use@17.5.0": "patches/react-use@17.5.0.patch",
-      "gulp@5.0.0": "patches/gulp@5.0.0.patch"
+      "gulp@5.0.0": "patches/gulp@5.0.0.patch",
+      "react-devtools-inline@5.3.0": "patches/react-devtools-inline@5.3.0.patch"
     }
   }
 }
