--- a/package.json
+++ b/package.json
@@ -154,7 +154,8 @@
       "@lifi/wallet-management@2.6.0": "patches/@lifi__wallet-management@2.6.0.patch",
       "react-use@17.5.0": "patches/react-use@17.5.0.patch",
       "gulp@5.0.0": "patches/gulp@5.0.0.patch",
-      "react-devtools-inline@5.3.0": "patches/react-devtools-inline@5.3.0.patch"
+      "react-devtools-inline@5.3.0": "patches/react-devtools-inline@5.3.0.patch",
+      "@splinetool/runtime@0.9.342": "patches/@splinetool__runtime@0.9.342.patch"
     }
   }
 }
