--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -89,7 +89,7 @@ jobs:
       - uses: pnpm/action-setup@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: "21"
+          node-version-file: ".node-version"
           cache: "pnpm"
       - name: Authenticate NPM
         uses: DimensionDev/github-token-action@latest
@@ -106,7 +106,7 @@ jobs:
       - uses: pnpm/action-setup@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: "21"
+          node-version-file: ".node-version"
           cache: "pnpm"
       - name: Authenticate NPM
         uses: DimensionDev/github-token-action@latest
@@ -129,7 +129,7 @@ jobs:
       - uses: pnpm/action-setup@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: "21"
+          node-version-file: ".node-version"
           cache: "pnpm"
       - name: Authenticate NPM
         uses: DimensionDev/github-token-action@latest
