--- a/packages/vitest-setup/package.json
+++ b/packages/vitest-setup/package.json
@@ -1,5 +1,6 @@
 {
     "type": "module",
+    "sideEffects": ["./index.ts"],
     "dependencies": {
         "msw": "2.3.1",
         "core-js": "3.37.1"
