--- a/packages/mask/package.json
+++ b/packages/mask/package.json
@@ -149,6 +149,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@lavamoat/webpack": "0.3.0-beta.0",
     "@nice-labs/emit-file-webpack-plugin": "^1.1.4",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
     "@types/color": "^3.0.6",
