--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "@changesets/cli": "^2.27.6",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
-    "@eslint-react/eslint-plugin": "^1.5.19",
+    "@eslint-react/eslint-plugin": "^1.5.27-beta.0",
     "@eslint/compat": "^1.1.0",
     "@magic-works/i18n-codegen": "^0.6.1",
     "@masknet/cli": "workspace:^",
