fixup! refactor: slim maskbook for firefly

--- a/packages/plugins/tsconfig.json
+++ b/packages/plugins/tsconfig.json
@@ -1,4 +1,8 @@
 {
   "extends": "../../tsconfig.leaf.json",
-  "references": [{ "path": "./Calendar/tsconfig.json" }, { "path": "./RedPacket/tsconfig.json" }]
+  "references": [
+    { "path": "./Calendar/tsconfig.json" },
+    { "path": "./RedPacket/tsconfig.json" },
+    { "path": "./Snapshot/tsconfig.json" }
+  ]
 }
