--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "name": "mask-network",
   "type": "module",
-  "packageManager": "pnpm@8.7.6",
+  "packageManager": "pnpm@8.15.8",
   "engines": {
     "node": ">=20.11.1",
-    "pnpm": ">=8.6.0",
-    "yarn": ">=999.0.0",
-    "npm": ">=999.0.0"
+    "pnpm": ">=8.15.8"
   },
   "version": "2.26.2",
   "private": true,
