--- a/package.json
+++ b/package.json
@@ -58,8 +58,7 @@
     "@changesets/cli": "^2.27.6",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
-    "@eslint-react/eslint-plugin": "^1.5.27-beta.0",
-    "@eslint/compat": "^1.1.0",
+    "@eslint-react/eslint-plugin": "^1.8.0",
     "@magic-works/i18n-codegen": "^0.6.1",
     "@masknet/cli": "workspace:^",
     "@masknet/config": "workspace:^",
@@ -67,25 +66,25 @@
     "@nice-labs/git-rev": "^3.5.1",
     "@swc-node/register": "^1.10.0",
     "@swc/core": "1.6.6",
-    "@tanstack/eslint-plugin-query": "^5.49.1",
+    "@tanstack/eslint-plugin-query": "^5.51.15",
     "@types/lodash-es": "^4.17.12",
     "@vitest/ui": "^1.6.0",
     "cspell": "^8.9.1",
-    "eslint": "9.6.0",
+    "eslint": "9.8.0",
     "eslint-formatter-junit": "^8.40.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-i": "^2.29.1",
-    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-hooks": "^5.1.0-rc-06d0b89e-20240801",
     "eslint-plugin-tss-unused-classes": "^1.0.2",
-    "eslint-plugin-unicorn": "^54.0.0",
-    "eslint-plugin-unused-imports": "^4.0.0",
+    "eslint-plugin-unicorn": "^55.0.0",
+    "eslint-plugin-unused-imports": "^4.0.1",
     "gulp": "^5.0.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
     "prettier": "^3.3.2",
     "svgo": "^3.3.2",
     "typescript": "5.5.2",
-    "typescript-eslint": "^7.14.1",
+    "typescript-eslint": "^8.0.0",
     "vite": "^5.3.2",
     "vitest": "^1.6.0"
   },
