--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -20,6 +20,7 @@
     "proper-lockfile": "^4.1.2",
     "rimraf": "^5.0.7",
     "source-map": "^0.7.4",
+    "typechain": "^8.3.2",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
