--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -31,17 +31,12 @@
     "@masknet/web3-shared-flow": "workspace:^",
     "@masknet/web3-shared-solana": "workspace:^",
     "@react-hookz/web": "^23.1.0",
-    "@tanstack/react-query-devtools": "^5.29.2",
-    "@types/d3": "5.16.4",
-    "@types/json-stable-stringify": "^1.0.34",
     "bignumber.js": "9.1.2",
-    "d3": "^5.16.0",
     "date-fns": "^2.30.0",
     "fuse.js": "^7.0.0",
     "immer": "^10.0.2",
     "json-stable-stringify": "^1.0.2",
     "lodash-es": "^4.17.21",
-    "pure-react-carousel": "^1.30.1",
     "qrcode": "^1.5.3",
     "react-hook-form": "^7.45.2",
     "react-markdown": "^8.0.7",
@@ -58,6 +53,7 @@
   },
   "devDependencies": {
     "@types/qrcode": "^1.5.2",
-    "@types/use-subscription": "^1.0.0"
+    "@types/use-subscription": "^1.0.0",
+    "@types/json-stable-stringify": "^1.0.34"
   }
 }
