--- a/packages/web3-hooks/base/package.json
+++ b/packages/web3-hooks/base/package.json
@@ -21,10 +21,12 @@
     "@masknet/web3-shared-flow": "workspace:^",
     "@masknet/web3-shared-solana": "workspace:^",
     "@tanstack/react-query": "^5.29.2",
-    "@types/use-subscription": "^1.0.0",
     "bignumber.js": "9.1.2",
     "react-use": "^17.4.0",
     "unstated-next": "^1.1.0",
     "use-subscription": "^1.8.0"
+  },
+  "devDependencies": {
+    "@types/use-subscription": "^1.0.0"
   }
 }
