chore: shared-base-ui

--- a/packages/shared-base-ui/package.json
+++ b/packages/shared-base-ui/package.json
@@ -16,11 +16,13 @@
     "@masknet/flags": "workspace:^",
     "@masknet/shared-base": "workspace:^",
     "@tanstack/react-query": "^5.29.2",
-    "@types/use-subscription": "^1.0.0",
-    "@types/uuid": "^9.0.3",
     "react-use": "^17.4.0",
     "use-subscription": "^1.8.0",
     "uuid": "^9.0.0",
     "urlcat": "^3.1.0"
+  },
+  "devDependencies": {
+    "@types/use-subscription": "^1.0.0",
+    "@types/uuid": "^9.0.3"
   }
 }
