--- a/packages/mask/package.json
+++ b/packages/mask/package.json
@@ -19,7 +19,8 @@
     "./popups/initialization/**",
     "./shared/plugin-infra/register.js",
     "./shared-ui/initialization/**",
-    "./web-workers/**"
+    "./web-workers/**",
+    "./sandbox/index.ts"
   ],
   "license": "AGPL-3.0-or-later",
   "type": "module",
