--- a/packages/mask/tsconfig.json
+++ b/packages/mask/tsconfig.json
@@ -7,6 +7,7 @@
     { "path": "./dashboard/tsconfig.json" },
     { "path": "./devtools/tsconfig.json" },
     { "path": "./entry-sdk/tsconfig.json" },
-    { "path": "./popups/tsconfig.json" }
+    { "path": "./popups/tsconfig.json" },
+    { "path": "./sandbox/tsconfig.json" }
   ]
 }
