--- a/packages/mask/.webpack/manifest/manifest-mv3.json
+++ b/packages/mask/.webpack/manifest/manifest-mv3.json
@@ -13,7 +13,7 @@
         "256": "assets/256x256.png"
     },
     "action": { "default_popup": "popups.html" },
-    "side_panel": { "default_path": "popups.html" },
+    "side_panel": { "default_path": "sidepanel.html" },
     "homepage_url": "https://mask.io",
     "description": "The portal to the new & open Internet. Send encrypted message and decentralized Apps right on top of social networks.",
     "web_accessible_resources": [
