--- a/tsconfig.json
+++ b/tsconfig.json
@@ -89,11 +89,7 @@
       "@masknet/web3-shared-base": ["./packages/web3-shared/base/src/index.ts"],
       "@masknet/web3-shared-evm": ["./packages/web3-shared/evm/src/index.ts"],
       "@masknet/web3-shared-flow": ["./packages/web3-shared/flow/src/index.ts"],
-      "@masknet/web3-shared-solana": ["./packages/web3-shared/solana/src/index.ts"],
-      // @masknet/scripts: insert-here
-
-      // Plugins
-      "@masknet/plugin-calendar": ["./packages/plugins/Calendar/src/index.ts"]
+      "@masknet/web3-shared-solana": ["./packages/web3-shared/solana/src/index.ts"]
     }
   },
   "files": []
