--- a/packages/sentry/package.json
+++ b/packages/sentry/package.json
@@ -10,8 +10,7 @@
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-replace": "^5.0.7",
-    "rollup": "^4.18.0",
-    "rollup-plugin-swc3": "^0.11.2"
+    "rollup": "^4.18.0"
   },
   "scripts": {
     "start": "rollup -c -w",
