--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "mask-network",
   "type": "module",
-  "packageManager": "pnpm@9.9.0",
+  "packageManager": "pnpm@9.4.0",
   "engines": {
     "node": ">=22.2.0",
-    "pnpm": ">=9.9.0",
+    "pnpm": ">=9.1.1",
     "yarn": ">=999.0.0",
     "npm": ">=999.0.0"
   },
@@ -26,7 +26,9 @@
     "svgo": "svgo packages/icons/*/*.svg",
     "test": "vitest --pool=forks",
     "spellcheck": "cspell lint --no-must-find-files",
-    "clean": "npx gulp clean"
+    "clean": "npx gulp clean",
+    "lingui-compile-all": "pnpm run -r --parallel lingui-compile",
+    "lingui-extract-all": "pnpm run -r --parallel lingui-extract"
   },
   "dependencies": {
     "@dimensiondev/holoflows-kit": "0.9.0-20240322092738-f9180f3",
@@ -34,6 +36,8 @@
     "@emotion/react": "11.11.4",
     "@emotion/serialize": "1.1.4",
     "@emotion/styled": "11.11.5",
+    "@lingui/core": "^4.11.3",
+    "@lingui/react": "^4.11.3",
     "@masknet/kit": "0.4.0",
     "@mui/base": "5.0.0-beta.40",
     "@mui/icons-material": "5.15.21",
@@ -59,13 +63,16 @@
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@eslint-react/eslint-plugin": "^1.12.2",
+    "@lingui/cli": "^4.11.3",
+    "@lingui/macro": "^4.11.3",
+    "@lingui/swc-plugin": "^4.0.8",
     "@magic-works/i18n-codegen": "^0.6.1",
     "@masknet/cli": "workspace:^",
     "@masknet/config": "workspace:^",
     "@masknet/eslint-plugin": "^0.3.0",
     "@nice-labs/git-rev": "^3.5.1",
     "@swc-node/register": "^1.10.9",
-    "@swc/core": "1.7.14",
+    "@swc/core": "1.6.13",
     "@tanstack/eslint-plugin-query": "^5.51.15",
     "@types/lodash-es": "^4.17.12",
     "@vitest/ui": "^1.6.0",
@@ -74,6 +81,7 @@
     "eslint-formatter-junit": "^8.40.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-i": "^2.29.1",
+    "eslint-plugin-lingui": "^0.3.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc-06d0b89e-20240801",
     "eslint-plugin-tss-unused-classes": "^1.0.2",
     "eslint-plugin-unicorn": "^55.0.0",
