--- a/packages/mask/package.json
+++ b/packages/mask/package.json
@@ -171,5 +171,14 @@
   },
   "peerDependencies": {
     "tss-react": "^4.9.0"
+  },
+  "scripts": {
+    "lingui-extract": "../../node_modules/.bin/lingui extract",
+    "lingui-compile": "../../node_modules/.bin/lingui compile"
+  },
+  "lingui": {
+    "catalogs": [{ "path": "./shared-ui/locale/{locale}", "include": ["./content-script/", "./dashboard/", "./popups/", "./shared/", "./shared-ui/", "./swap/"] }],
+    "compileNamespace": "json",
+    "locales": ["en-US", "ja-JP", "ko-KR", "zh-CN", "zh-TW"]
   }
 }
