--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
       "@mui/base": "$@mui/base",
       "@mui/icons-material": "$@mui/icons-material",
       "@mui/material": "$@mui/material",
+      "@swc/core": "$@swc/core",
       "@protobufjs/inquire": "1.1.0",
       "@splinetool/runtime": "0.9.342",
       "@tanstack/react-query": "^5.49.2",
