--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "mask-network",
   "type": "module",
-  "packageManager": "pnpm@9.4.0",
+  "packageManager": "pnpm@9.9.0",
   "engines": {
     "node": ">=22.2.0",
-    "pnpm": ">=9.1.1",
+    "pnpm": ">=9.9.0",
     "yarn": ">=999.0.0",
     "npm": ">=999.0.0"
   },
@@ -27,8 +27,8 @@
     "test": "vitest --pool=forks",
     "spellcheck": "cspell lint --no-must-find-files",
     "clean": "npx gulp clean",
-    "lingui-compile-all": "pnpm run -r --parallel lingui-compile",
-    "lingui-extract-all": "pnpm run -r --parallel lingui-extract"
+    "lingui-compile": "npx gulp lingui-compile",
+    "lingui-extract": "npx gulp lingui-extract"
   },
   "dependencies": {
     "@dimensiondev/holoflows-kit": "0.9.0-20240322092738-f9180f3",
