--- a/packages/mask/package.json
+++ b/packages/mask/package.json
@@ -172,13 +172,14 @@
   "peerDependencies": {
     "tss-react": "^4.9.0"
   },
-  "scripts": {
-    "lingui-extract": "../../node_modules/.bin/lingui extract",
-    "lingui-compile": "../../node_modules/.bin/lingui compile"
-  },
   "lingui": {
     "catalogs": [{ "path": "./shared-ui/locale/{locale}", "include": ["./content-script/", "./dashboard/", "./popups/", "./shared/", "./shared-ui/", "./swap/"] }],
     "compileNamespace": "json",
-    "locales": ["en-US", "ja-JP", "ko-KR", "zh-CN", "zh-TW"]
+    "locales": ["en-US", "ja-JP", "ko-KR", "zh-CN", "zh-TW"],
+    "fallbackLocales": {
+      "zh-CN": "zh-TW",
+      "zh-TW": "zh-CN",
+      "default": "en-US"
+    }
   }
 }
