--- a/packages/plugins/template/package.json
+++ b/packages/plugins/template/package.json
@@ -15,10 +15,6 @@
       "default": "./dist/register.js"
     }
   },
-  "scripts": {
-    "lingui-extract": "../../../node_modules/.bin/lingui extract",
-    "lingui-compile": "../../../node_modules/.bin/lingui compile"
-  },
   "dependencies": {
     "@masknet/plugin-infra": "workspace:^",
     "@masknet/shared-base": "workspace:^"
@@ -26,6 +22,11 @@
   "lingui": {
     "catalogs": [{ "path": "src/locale/{locale}", "include": ["src"] }],
     "compileNamespace": "json",
-    "locales": ["en-US", "ja-JP", "ko-KR", "zh-CN", "zh-TW"]
+    "locales": ["en-US", "ja-JP", "ko-KR", "zh-CN", "zh-TW"],
+    "fallbackLocales": {
+      "zh-CN": "zh-TW",
+      "zh-TW": "zh-CN",
+      "default": "en-US"
+    }
   }
 }
