--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@eslint-react/eslint-plugin": "^1.12.2",
+    "@eslint/compat": "^1.1.1",
     "@lingui/cli": "^4.11.3",
     "@lingui/macro": "^4.11.3",
     "@lingui/swc-plugin": "^4.0.8",
