--- a/packages/plugins/CyberConnect/package.json
+++ b/packages/plugins/CyberConnect/package.json
@@ -29,5 +29,15 @@
     "@masknet/web3-shared-evm": "workspace:^",
     "boring-avatars": "^1.10.2",
     "react-use": "^17.5.0"
+  },
+  "lingui": {
+    "catalogs": [{ "path": "src/locale/{locale}", "include": ["src"] }],
+    "compileNamespace": "json",
+    "locales": ["en-US", "ja-JP", "ko-KR", "zh-CN", "zh-TW"],
+    "fallbackLocales": {
+      "zh-CN": "zh-TW",
+      "zh-TW": "zh-CN",
+      "default": "en-US"
+    }
   }
 }
