--- a/packages/plugins/FriendTech/package.json
+++ b/packages/plugins/FriendTech/package.json
@@ -31,5 +31,15 @@
     "react-router-dom": "^6.24.0",
     "react-use": "^17.5.0",
     "urlcat": "^3.1.0"
+  },
+  "lingui": {
+    "catalogs": [{ "path": "src/locale/{locale}", "include": ["src"] }],
+    "compileNamespace": "json",
+    "locales": ["en-US", "ja-JP", "ko-KR", "zh-CN", "zh-TW"],
+    "fallbackLocales": {
+      "zh-CN": "zh-TW",
+      "zh-TW": "zh-CN",
+      "default": "en-US"
+    }
   }
 }
