--- a/packages/plugins/RedPacket/package.json
+++ b/packages/plugins/RedPacket/package.json
@@ -37,5 +37,15 @@
     "urlcat": "^3.1.0",
     "web3-core": "1.10.4",
     "web3-utils": "1.10.2"
+  },
+  "lingui": {
+    "catalogs": [{ "path": "src/locale/{locale}", "include": ["src"] }],
+    "compileNamespace": "json",
+    "locales": ["en-US", "ja-JP", "ko-KR", "zh-CN", "zh-TW"],
+    "fallbackLocales": {
+      "zh-CN": "zh-TW",
+      "zh-TW": "zh-CN",
+      "default": "en-US"
+    }
   }
 }
