--- a/packages/plugins/SmartPay/package.json
+++ b/packages/plugins/SmartPay/package.json
@@ -30,5 +30,15 @@
         "date-fns": "^3.6.0",
         "react-router-dom": "^6.24.0",
         "react-use": "^17.5.0"
+    },
+    "lingui": {
+      "catalogs": [{ "path": "src/locale/{locale}", "include": ["src"] }],
+      "compileNamespace": "json",
+      "locales": ["en-US", "ja-JP", "ko-KR", "zh-CN", "zh-TW"],
+      "fallbackLocales": {
+        "zh-CN": "zh-TW",
+        "zh-TW": "zh-CN",
+        "default": "en-US"
+      }
     }
 }
