--- a/packages/plugins/SwitchLogo/package.json
+++ b/packages/plugins/SwitchLogo/package.json
@@ -23,5 +23,15 @@
         "@masknet/shared-base-ui": "workspace:^",
         "@masknet/theme": "workspace:^",
         "@masknet/web3-telemetry": "workspace:^"
+    },
+    "lingui": {
+      "catalogs": [{ "path": "src/locale/{locale}", "include": ["src"] }],
+      "compileNamespace": "json",
+      "locales": ["en-US", "ja-JP", "ko-KR", "zh-CN", "zh-TW"],
+      "fallbackLocales": {
+        "zh-CN": "zh-TW",
+        "zh-TW": "zh-CN",
+        "default": "en-US"
+      }
     }
 }
