--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -25,5 +25,15 @@
   },
   "devDependencies": {
     "@types/react-window": "^1.8.8"
+  },
+  "lingui": {
+    "catalogs": [{ "path": "./src/locale/{locale}", "include": ["./src/"] }],
+    "compileNamespace": "json",
+    "locales": ["en-US", "ja-JP", "ko-KR", "zh-CN", "zh-TW"],
+    "fallbackLocales": {
+      "zh-CN": "zh-TW",
+      "zh-TW": "zh-CN",
+      "default": "en-US"
+    }
   }
 }
