--- a/packages/plugins/Trader/package.json
+++ b/packages/plugins/Trader/package.json
@@ -32,10 +32,12 @@
     "@masknet/web3-shared-evm": "workspace:^",
     "@masknet/web3-shared-solana": "workspace:^",
     "@masknet/web3-telemetry": "workspace:^",
+    "bignumber.js": "9.1.2",
     "date-fns": "^2.30.0",
     "fuse.js": "^7.0.0",
     "react-router-dom": "^6.24.0",
-    "react-use": "^17.4.0"
+    "react-use": "^17.4.0",
+    "urlcat": "^3.1.0"
   },
   "lingui": {
     "catalogs": [
