--- a/packages/web3-providers/package.json
+++ b/packages/web3-providers/package.json
@@ -73,6 +73,7 @@
     "socket.io-client": "2.4.0",
     "twitter-text": "^3.1.0",
     "urlcat": "^3.1.0",
+    "uuid": "^9.0.0",
     "web3-core": "1.10.4",
     "web3-core-helpers": "1.10.3",
     "web3-eth": "1.10.2",
@@ -84,6 +85,7 @@
     "@types/bs58": "^4.0.4",
     "@types/socket.io-client": "^1.4.36",
     "@types/twitter-text": "^3.1.10",
-    "@types/use-subscription": "^1.0.2"
+    "@types/use-subscription": "^1.0.2",
+    "@types/uuid": "^10.0.0"
   }
 }
