--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "msw": "^1.2.1",
     "prettier": "^3.1.0",
     "svgo": "^3.0.2",
-    "typescript": "5.5.0-beta",
+    "typescript": "^5.6.2",
     "typescript-eslint": "^7.1.1",
     "vite": "^4.5.0",
     "vitest": "^0.34.6"
