--- a/packages/plugins/Trader/package.json
+++ b/packages/plugins/Trader/package.json
@@ -35,6 +35,7 @@
     "bignumber.js": "9.1.2",
     "date-fns": "^2.30.0",
     "fuse.js": "^7.0.0",
+    "immer": "^10.1.1",
     "react-router-dom": "^6.24.0",
     "react-use": "^17.4.0",
     "urlcat": "^3.1.0",
